--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
+  <link rel="icon" type="image/svg+xml" href="/3d-block-game-generator/assets/favicon.17e50649.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3D Block Game Generator</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <script type="module" crossorigin src="/assets/index.61f476f4.js"></script>
-  <link rel="stylesheet" href="/assets/index.1ab21624.css">
+  <script type="module" crossorigin src="/3d-block-game-generator/assets/index.61f476f4.js"></script>
+  <link rel="stylesheet" href="/3d-block-game-generator/assets/index.1ab21624.css">
 </head>
 
 <body>
